--- a/hobbies.html
+++ b/hobbies.html
@@ -10,11 +10,11 @@
 <p><em>Founder and CEO of<strong><a href="https://www.sanmiguelbrewery.com.ph/"> San Miguel Brewery</a></strong>.</em></p>
 <p>I am an iOS Developer. I love coffee and brew my own beers</p>
 <hr>
-<h3>Boks and Teaching</h3>
-<ul>
-  <li>The complete iOS App Development Bootcamp</li>
-  <li>The complete Web Development Bootcamp</li>
-  </ul>
   <a href="hobbies.html">My hobbies</a>
+  <ul>
+    <li><a href="https://www.facebook.com/rechie.paches/videos/2156034541142673/?t=6">Beer brewing</a></li>
+    <li><a href="https://www.facebook.com/rechie.paches/videos/2156034541142673/?t=6">Martial Arts</a></li>
+    <li><a href="https://www.facebook.com/rechie.paches/videos/2156034541142673/?t=6">Motorcycle</a></li>
+  </ul>
   </body>
 </html>
