--- a/index.html
+++ b/index.html
@@ -33,23 +33,21 @@
   </thead>
   <tbody>
   </tbody>
-  <table>
-    <h3>Skills</3>
-  </tbale>
+</table>
+    <h3>Skills</h3>
+    <table>
   <tr>
     <td>iOS Development</td>
-    <td>
   <tfoot>
   </tfoot>
       <td>2010-2013</td>
       <td>Lead Developer at Tempo App</td>
     </tr>
-
   <a href="hobbies.html">My Hobbies</a>
-  <a href="contact-me.html">Contact Me</a>
+  <a href="contac-me.html">Contact Me</a>
   <ol>
     <li><a href="https://www.facebook.com/rechie.paches/videos/2156034541142673/?t=6">Beer brewing</a></li>
-    <li>Martial Arts</li>
+    <li><a href="https://www.facebook.com/rechie.paches/videos/2156034541142673/?t=6">Martial Arts</a></li>
     <li><a href="https://www.facebook.com/rechie.paches/videos/2156034541142673/?t=6">Motorcycle</a></li>
     </ol>
     <a href="https://we.standford.edu/group/csp/cpdfs21/htmlcheatsheet.pdf">Download Cheatsheet</a>
